--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "sass-loader": "^12.3.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "font-awesome": "^4.7.0",
         "imagemin-webpack-plugin": "^1.5.2"
     }
 }
