--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "chart.js": "^3.6.0",
         "font-awesome": "^4.7.0",
         "imagemin-webpack-plugin": "^2.4.2"
     }
