--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/chart-area-demo.js": "/js/chart-area-demo.js",
+    "/js/chart.js": "/js/chart.js",
     "/css/app.css": "/css/app.css",
     "/videos/background-01.mp4": "/videos/background-01.mp4",
     "/docs/erd.html": "/docs/erd.html"
